atualização nos codigos   e versão celular atualizada

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 
 <body>
     <header>
-        <a class="link-header">HOME</a>
-        <a class="link-header">ABOUT</a>
-        <a class="link-header">PRODUCT</a>
-        <a class="link-header">SERVICE</a>
-        <a class="link-header">CONTACT</a>
-        <button class="button-header">LOG IN</button>
+        <a class="link-header" href="#">HOME</a>
+        <a class="link-header" href="#">ABOUT</a>
+        <a class="link-header" href="#">PRODUCT</a>
+        <a class="link-header" href="#">SERVICE</a>
+        <a class="link-header" href="#">CONTACT</a>
+        <button class="button-header" href="#">LOG IN</button>
     </header>
     <main>
-        <img src="img/we-care.png" alt="We-Care-logo" class="logo-image">
+        <img src="assets/we-care.png" alt="We-Care-logo" class="logo-image">
 
         <section>
             <h1>WE CARE</h1>
             <h2>About Your Pet</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem a qui amet nihil, deserunt ab assumenda,
                 inventore minus sunt ipsa omnis maiores iure temporibus tenetur quia cumque in ullam quo?</p>
-            <button class="button-main">EXPLORE</button>
+            <button class="button-main"href="#">EXPLORE</button>
         </section>
     </main>
 
